Fix css layout issue

--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -55,12 +55,8 @@
     margin-bottom: 10px;
 }
 
-.skills-category ul {
-    /* padding-left: 20px; */
-}
-
 .experience-container {
-    width: 50%;
+    width: 100%;
     margin-bottom: 30px;
 }
 
